add: new notebooks

--- a/hand_tracking.ipynb
+++ b/hand_tracking.ipynb
@@ -40,8 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getter   = VideoGet().start()\n",
-    "shower   = VideoShow(frame = getter.frame).start()\n",
+    "stream = cv2.VideoCapture(0)\n",
     "detector = HandDetector(max_hands = 2, detection_con = 0.5)\n",
     "\n",
     "list_landmarks = []\n",
@@ -50,43 +49,25 @@
     "while True:\n",
     "    print(len(list_landmarks))\n",
     "\n",
-    "    if len(list_landmarks) > 2000:\n",
-    "        getter.stop()\n",
-    "        shower.stop()\n",
+    "    grabbed, frame = stream.read()\n",
+    "\n",
+    "    if cv2.waitKey(1) == ord(\"x\"):\n",
     "        break\n",
     "\n",
-    "    if getter.stopped or shower.stopped:\n",
-    "        getter.stop()\n",
-    "        shower.stop()\n",
-    "        break\n",
+    "    hands, image = detector.find_hands(frame)\n",
     "\n",
-    "    else:\n",
-    "        image = getter.frame\n",
-    "        hands, image = detector.find_hands(image)\n",
+    "    if len(hands) != 0:\n",
+    "        for hand in hands:\n",
+    "            list_landmarks.append(hand[\"landmarks\"])\n",
+    "            target.append(1)\n",
     "\n",
-    "        if len(hands) != 0:\n",
-    "            for hand in hands:\n",
+    "    cv2.imshow(\"Video\", image)\n",
     "\n",
-    "                list_landmarks.append(hand[\"landmarks\"])\n",
-    "                target.append(1)\n",
-    "\n",
-    "        shower.frame = image\n",
-    "\n",
-    "getter.release()\n",
+    "stream.release()\n",
     "cv2.destroyAllWindows()\n",
     "\n",
     "new         += list_landmarks\n",
     "new_targets += target\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.models import Model, Sequential\n",
-    "from tensorflow.keras.layers import Input, Flatten, Dense, Dropout"
    ]
   },
   {
