--- a/commands.ipynb
+++ b/commands.ipynb
@@ -16,8 +16,8 @@
     "- Righ Click;\n",
     "- Zoom In;\n",
     "- Zoom Out;\n",
-    "- Scrool Up;\n",
-    "- Scrool Down;\n",
+    "- Scrool Up - Single stroke, not a continuous scroll;\n",
+    "- Scrool Down - Single stroke, not a continuous scroll;\n",
     "- Back;\n",
     "- Advance;\n",
     "- Crtl+Tab;\n",
@@ -27,18 +27,28 @@
     "- Mute;\n",
     "- Unmute;"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
