add: notebook for experimentation

--- a/commands.ipynb
+++ b/commands.ipynb
@@ -19,13 +19,41 @@
     "- Scrool Up - Single stroke, not a continuous scroll;\n",
     "- Scrool Down - Single stroke, not a continuous scroll;\n",
     "- Back;\n",
-    "- Advance;\n",
+    "- Foward;\n",
     "- Crtl+Tab;\n",
     "- Win+L;\n",
     "- Volume Up;\n",
     "- Volume Down;\n",
     "- Mute;\n",
     "- Unmute;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tracking mouse: Uses the {INDEX+MIDDLE} gesture. Only for the {RIGHT} hand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Holding the Left Button: Uses the {THUMB+INDEX+MIDDLE} gesture. Only for the {RIGHT} hand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Back: Uses the {SWIPE} gesture. Only for the {LEFT} hand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Foward: Uses the {SWIPE} gesture. Only for the {RIGHT} hand."
    ]
   }
  ],
