feat: possibility to flip gesture image

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------   12.2%   -------------\n"
+      "-------------   14.8%   -------------\n"
      ]
     }
    ],
@@ -217,7 +217,8 @@
     "stream   = cv2.VideoCapture(0)\n",
     "detector = HandDetector(max_hands = 1, detection_con = 0.95)\n",
     "\n",
-    "HARD_STOP = False\n",
+    "HARD_STOP          = False\n",
+    "FLIP_GESTURE_IMAGE = False\n",
     "\n",
     "while not collection_done(gest_dict = gestures_features, num_features = num_frames_per_gesture):\n",
     "    print_percentage_done(gest_features = gestures_features, num_features_per_gesture = num_frames_per_gesture)\n",
@@ -246,6 +247,10 @@
     "            features = hands[0][\"landmarks\"]\n",
     "\n",
     "        cv2.imshow(\"Video\", image)\n",
+    "        \n",
+    "        if FLIP_GESTURE_IMAGE:\n",
+    "            gesture_image = cv2.flip(gesture_image, 1)\n",
+    "\n",
     "        cv2.imshow(\"Gesture\", gesture_image)\n",
     "\n",
     "    gestures_features[gesture].append(features)\n",
