--- a/randomized_data_aquisition.ipynb
+++ b/randomized_data_aquisition.ipynb
@@ -35,9 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_name = \"teste\"\n",
+    "subject_name = \"Subject1\"\n",
     "\n",
-    "distance = \"50cm\""
+    "distance = \"75cm\""
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,22 +66,7 @@
     "    8: \"side\",\n",
     "    9: \"up\"\n",
     "\n",
-    "}\n",
-    "\n",
-    "# gestures_features = {\n",
-    "\n",
-    "#     0: [],\n",
-    "#     1: [],\n",
-    "#     2: [],\n",
-    "#     3: [],\n",
-    "#     4: [],\n",
-    "#     5: [],\n",
-    "#     6: [],\n",
-    "#     7: [],\n",
-    "#     8: [],\n",
-    "#     9: [],\n",
-    "\n",
-    "# }"
+    "}"
    ]
   },
   {
@@ -93,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,31 +176,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "gestures_features = get_gestures_features(subject = subject_name, distance = distance, gest_names = gestures_names)\n",
     "\n",
-    "num_frames_per_gesture = 50"
+    "num_frames_per_gesture = 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------   14.8%   -------------\n"
+      "-------------   61.0%   -------------\n"
      ]
     }
    ],
    "source": [
     "stream   = cv2.VideoCapture(0)\n",
-    "detector = HandDetector(max_hands = 1, detection_con = 0.95)\n",
+    "detector = HandDetector(max_hands = 1, detection_con = 0.85, normalize = False)\n",
     "\n",
     "HARD_STOP          = False\n",
     "FLIP_GESTURE_IMAGE = False\n",
