add: new experiments data

--- a/randomized_data_aquisition.ipynb
+++ b/randomized_data_aquisition.ipynb
@@ -35,9 +35,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_name = \"Subject1\"\n",
+    "subject_name = \"Subject5\"\n",
+    "# subject_name = \"teste\"\n",
     "\n",
-    "distance = \"75cm\""
+    "distance = \"50cm\""
    ]
   },
   {
@@ -194,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------   61.0%   -------------\n"
+      "-------------   99.67%   -------------\n"
      ]
     }
    ],
@@ -246,6 +247,13 @@
     "cv2.destroyAllWindows()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
