--- a/hand_tracking.ipynb
+++ b/hand_tracking.ipynb
@@ -185,11 +185,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e3f2ef64853cb8e4cd4f7badb03b7637b6184dbffe732edc3115cca741e62b84"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('kotoamatsukami-T53X9OZe-py3.8': poetry)",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +202,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
