add: new streamed data

--- a/logisticregression_model.ipynb
+++ b/logisticregression_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,6 @@
     "\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
-    "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
    ]
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +69,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.414, 1.0],\n",
+       " [0.172, 0.829],\n",
+       " [0.276, 0.632],\n",
+       " [0.655, 0.526],\n",
+       " [0.966, 0.461],\n",
+       " [0.0, 0.566],\n",
+       " [0.034, 0.303],\n",
+       " [0.069, 0.158],\n",
+       " [0.069, 0.039],\n",
+       " [0.276, 0.566],\n",
+       " [0.31, 0.303],\n",
+       " [0.31, 0.132],\n",
+       " [0.276, 0.0],\n",
+       " [0.621, 0.592],\n",
+       " [0.828, 0.421],\n",
+       " [0.828, 0.5],\n",
+       " [0.724, 0.579],\n",
+       " [0.931, 0.645],\n",
+       " [1.0, 0.513],\n",
+       " [0.931, 0.566],\n",
+       " [0.862, 0.618]]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.414, 1.   , 0.172, 0.829, 0.276, 0.632, 0.655, 0.526, 0.966,\n",
+       "       0.461, 0.   , 0.566, 0.034, 0.303, 0.069, 0.158, 0.069, 0.039,\n",
+       "       0.276, 0.566, 0.31 , 0.303, 0.31 , 0.132, 0.276, 0.   , 0.621,\n",
+       "       0.592, 0.828, 0.421, 0.828, 0.5  , 0.724, 0.579, 0.931, 0.645,\n",
+       "       1.   , 0.513, 0.931, 0.566, 0.862, 0.618])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shaped_train_features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,89 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n",
-      "c:\\pypoetry\\Cache\\virtualenvs\\kotoamatsukami-Hq7iVI3N-py3.8\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning:\n",
-      "\n",
-      "The max_iter was reached which means the coef_ did not converge\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LogisticRegressionCV(cv=5, max_iter=1000, solver='saga')"
+       "LogisticRegression(max_iter=1000)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr_model = LogisticRegressionCV(solver=\"saga\", cv=5, max_iter=1000)\n",
-    "# lr_model = LogisticRegression(max_iter=10000)\n",
+    "# lr_model = LogisticRegressionCV(solver=\"saga\", cv=5, max_iter=1000)\n",
+    "lr_model = LogisticRegression(max_iter=1000)\n",
     "\n",
     "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
     "\n",
@@ -181,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -209,20 +206,20 @@
       "The accuracy is 99.41%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.99      1.00       128\n",
-      "           1       0.99      1.00      1.00       136\n",
-      "           2       0.99      1.00      0.99       137\n",
-      "           3       0.99      0.98      0.99       112\n",
-      "           4       1.00      0.99      1.00       150\n",
-      "           5       0.98      0.98      0.98       112\n",
-      "           6       1.00      1.00      1.00       166\n",
-      "           7       1.00      1.00      1.00       133\n",
-      "           8       0.99      1.00      1.00       143\n",
-      "           9       0.99      0.98      0.99       133\n",
+      "           0     1.0000    0.9922    0.9961       128\n",
+      "           1     0.9927    1.0000    0.9963       136\n",
+      "           2     0.9856    1.0000    0.9928       137\n",
+      "           3     0.9910    0.9821    0.9865       112\n",
+      "           4     1.0000    0.9933    0.9967       150\n",
+      "           5     0.9821    0.9821    0.9821       112\n",
+      "           6     1.0000    1.0000    1.0000       166\n",
+      "           7     1.0000    1.0000    1.0000       133\n",
+      "           8     0.9931    1.0000    0.9965       143\n",
+      "           9     0.9924    0.9850    0.9887       133\n",
       "\n",
-      "    accuracy                           0.99      1350\n",
-      "   macro avg       0.99      0.99      0.99      1350\n",
-      "weighted avg       0.99      0.99      0.99      1350\n",
+      "    accuracy                         0.9941      1350\n",
+      "   macro avg     0.9937    0.9935    0.9936      1350\n",
+      "weighted avg     0.9941    0.9941    0.9941      1350\n",
       "\n"
      ]
     },
@@ -369,47 +366,39 @@
          "colorscale": [
           [
            0,
-           "rgb(5,48,97)"
+           "rgb(247,251,255)"
           ],
           [
-           0.1,
-           "rgb(33,102,172)"
+           0.125,
+           "rgb(222,235,247)"
           ],
           [
-           0.2,
-           "rgb(67,147,195)"
+           0.25,
+           "rgb(198,219,239)"
           ],
           [
-           0.3,
-           "rgb(146,197,222)"
-          ],
-          [
-           0.4,
-           "rgb(209,229,240)"
+           0.375,
+           "rgb(158,202,225)"
           ],
           [
            0.5,
-           "rgb(247,247,247)"
+           "rgb(107,174,214)"
           ],
           [
-           0.6,
-           "rgb(253,219,199)"
+           0.625,
+           "rgb(66,146,198)"
           ],
           [
-           0.7,
-           "rgb(244,165,130)"
+           0.75,
+           "rgb(33,113,181)"
           ],
           [
-           0.8,
-           "rgb(214,96,77)"
-          ],
-          [
-           0.9,
-           "rgb(178,24,43)"
+           0.875,
+           "rgb(8,81,156)"
           ],
           [
            1,
-           "rgb(103,0,31)"
+           "rgb(8,48,107)"
           ]
          ]
         },
@@ -1264,22 +1253,22 @@
     "\n",
     "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "print(classification_report(y_true=test_targets, y_pred=predictions))\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"RdBu_r\")"
+    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "618 µs ± 169 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "263 µs ± 46.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1297,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
