--- a/neuralnetwork_model.ipynb
+++ b/neuralnetwork_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,9 @@
     "\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras import layers"
    ]
   },
   {
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +65,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training the model"
+    "# Training a baseline model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,26 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier()"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rf_model = RandomForestClassifier()\n",
+    "mlp_model = Sequential()\n",
     "\n",
-    "shaped_train_features = reshape_to_train(unshaped=train_features)\n",
+    "mlp_model.add(layers.Input(shape = (21, 2, ), dtype = \"int32\"))\n",
+    "mlp_model.add(layers.Flatten())\n",
+    "mlp_model.add(layers.Dense(128, activation=\"relu\"))\n",
+    "mlp_model.add(layers.Dense(10, activation=\"softmax\"))\n",
     "\n",
-    "rf_model.fit(X=shaped_train_features, y=np.array(train_targets))"
+    "mlp_model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "baseline_history = mlp_model.fit(x=train_features, y=train_targets, epochs=50, verbose=0)"
    ]
   },
   {
@@ -113,13 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shaped_test_features = reshape_to_train(unshaped=test_features)\n",
-    "\n",
-    "predictions = rf_model.predict(shaped_test_features)"
+    "predictions = mlp_model.predict(test_features)\n",
+    "predictions = [pred.argmax() for pred in predictions]"
    ]
   },
   {
@@ -131,30 +125,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is 99.56%\n",
+      "The accuracy is 75.78%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0     1.0000    0.9922    0.9961       128\n",
-      "           1     0.9927    1.0000    0.9963       136\n",
-      "           2     0.9928    1.0000    0.9964       137\n",
-      "           3     0.9910    0.9821    0.9865       112\n",
-      "           4     1.0000    1.0000    1.0000       150\n",
-      "           5     0.9910    0.9821    0.9865       112\n",
+      "           0     0.9769    0.9922    0.9845       128\n",
+      "           1     0.8857    0.4559    0.6019       136\n",
+      "           2     0.9856    1.0000    0.9928       137\n",
+      "           3     0.3644    0.8036    0.5014       112\n",
+      "           4     0.6983    0.5400    0.6090       150\n",
+      "           5     0.4896    0.4196    0.4519       112\n",
       "           6     1.0000    1.0000    1.0000       166\n",
-      "           7     1.0000    1.0000    1.0000       133\n",
-      "           8     0.9931    1.0000    0.9965       143\n",
-      "           9     0.9925    0.9925    0.9925       133\n",
+      "           7     0.6984    0.3308    0.4490       133\n",
+      "           8     0.9862    1.0000    0.9931       143\n",
+      "           9     0.7079    0.9474    0.8103       133\n",
       "\n",
-      "    accuracy                         0.9956      1350\n",
-      "   macro avg     0.9953    0.9949    0.9951      1350\n",
-      "weighted avg     0.9956    0.9956    0.9955      1350\n",
+      "    accuracy                         0.7578      1350\n",
+      "   macro avg     0.7793    0.7489    0.7394      1350\n",
+      "weighted avg     0.7963    0.7578    0.7537      1350\n",
       "\n"
      ]
     },
@@ -186,14 +180,14 @@
            0
           ],
           [
+           1,
+           62,
            0,
-           136,
-           0,
-           0,
-           0,
-           0,
+           70,
            0,
            0,
+           0,
+           3,
            0,
            0
           ],
@@ -211,39 +205,39 @@
           ],
           [
            0,
+           4,
+           0,
+           90,
            0,
            0,
-           110,
            0,
-           0,
-           0,
-           0,
+           16,
            1,
            1
           ],
           [
+           1,
+           0,
+           1,
+           0,
+           81,
+           45,
            0,
            0,
            0,
-           0,
-           150,
-           0,
-           0,
-           0,
-           0,
-           0
+           22
           ],
           [
            0,
            1,
            0,
            1,
+           33,
+           47,
            0,
-           110,
            0,
-           0,
-           0,
-           0
+           1,
+           29
           ],
           [
            0,
@@ -259,13 +253,13 @@
           ],
           [
            0,
+           3,
+           0,
+           86,
            0,
            0,
            0,
-           0,
-           0,
-           0,
-           133,
+           44,
            0,
            0
           ],
@@ -282,16 +276,16 @@
            0
           ],
           [
-           0,
-           0,
-           0,
-           0,
-           0,
            1,
            0,
            0,
            0,
-           132
+           2,
+           4,
+           0,
+           0,
+           0,
+           126
           ]
          ]
         }
@@ -1192,41 +1186,6 @@
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
     "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.1 ms ± 2 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "rf_model.predict(shaped_test_features)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Saving the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"models/decision_tree\", \"wb\") as f:\n",
-    "    pickle.dump(rf_model, f)"
    ]
   }
  ],
