--- a/decision_tree_model.ipynb
+++ b/decision_tree_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -148,20 +148,20 @@
       "The accuracy is 98.96%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.99      1.00       128\n",
-      "           1       0.99      0.99      0.99       136\n",
-      "           2       0.99      0.96      0.97       137\n",
-      "           3       0.99      0.98      0.99       112\n",
-      "           4       0.98      1.00      0.99       150\n",
-      "           5       0.99      0.98      0.99       112\n",
-      "           6       0.98      0.99      0.99       166\n",
-      "           7       0.99      1.00      1.00       133\n",
-      "           8       0.99      1.00      1.00       143\n",
-      "           9       0.99      0.98      0.99       133\n",
+      "           0     1.0000    0.9844    0.9921       128\n",
+      "           1     0.9926    0.9926    0.9926       136\n",
+      "           2     0.9926    0.9781    0.9853       137\n",
+      "           3     0.9910    0.9821    0.9865       112\n",
+      "           4     0.9740    1.0000    0.9868       150\n",
+      "           5     0.9735    0.9821    0.9778       112\n",
+      "           6     1.0000    1.0000    1.0000       166\n",
+      "           7     0.9925    1.0000    0.9963       133\n",
+      "           8     0.9862    1.0000    0.9931       143\n",
+      "           9     0.9923    0.9699    0.9810       133\n",
       "\n",
-      "    accuracy                           0.99      1350\n",
-      "   macro avg       0.99      0.99      0.99      1350\n",
-      "weighted avg       0.99      0.99      0.99      1350\n",
+      "    accuracy                         0.9896      1350\n",
+      "   macro avg     0.9895    0.9889    0.9892      1350\n",
+      "weighted avg     0.9897    0.9896    0.9896      1350\n",
       "\n"
      ]
     },
@@ -181,7 +181,7 @@
          "yaxis": "y",
          "z": [
           [
-           127,
+           126,
            0,
            1,
            0,
@@ -189,7 +189,7 @@
            0,
            0,
            0,
-           0,
+           1,
            0
           ],
           [
@@ -207,11 +207,11 @@
           [
            0,
            0,
-           132,
-           0,
-           2,
+           134,
            0,
            3,
+           0,
+           0,
            0,
            0,
            0
@@ -255,11 +255,11 @@
           [
            0,
            0,
-           1,
            0,
            0,
            0,
-           165,
+           0,
+           166,
            0,
            0,
            0
@@ -294,11 +294,11 @@
            0,
            0,
            0,
-           1,
+           3,
            0,
            1,
            0,
-           131
+           129
           ]
          ]
         }
@@ -308,47 +308,39 @@
          "colorscale": [
           [
            0,
-           "rgb(5,48,97)"
+           "rgb(247,251,255)"
           ],
           [
-           0.1,
-           "rgb(33,102,172)"
+           0.125,
+           "rgb(222,235,247)"
           ],
           [
-           0.2,
-           "rgb(67,147,195)"
+           0.25,
+           "rgb(198,219,239)"
           ],
           [
-           0.3,
-           "rgb(146,197,222)"
-          ],
-          [
-           0.4,
-           "rgb(209,229,240)"
+           0.375,
+           "rgb(158,202,225)"
           ],
           [
            0.5,
-           "rgb(247,247,247)"
+           "rgb(107,174,214)"
           ],
           [
-           0.6,
-           "rgb(253,219,199)"
+           0.625,
+           "rgb(66,146,198)"
           ],
           [
-           0.7,
-           "rgb(244,165,130)"
+           0.75,
+           "rgb(33,113,181)"
           ],
           [
-           0.8,
-           "rgb(214,96,77)"
-          ],
-          [
-           0.9,
-           "rgb(178,24,43)"
+           0.875,
+           "rgb(8,81,156)"
           ],
           [
            1,
-           "rgb(103,0,31)"
+           "rgb(8,48,107)"
           ]
          ]
         },
@@ -1203,22 +1195,22 @@
     "\n",
     "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "print(classification_report(y_true=test_targets, y_pred=predictions))\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"RdBu_r\")"
+    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "206 µs ± 13.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "218 µs ± 30.3 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -1236,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
