--- a/naive_bayes_model.ipynb
+++ b/naive_bayes_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"data/randomized/val_data\", \"rb\") as f:\n",
-    "    val_data = pickle.load(f)\n",
-    "\n",
-    "val_features = val_data[0]\n",
-    "val_targets  = val_data[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +78,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,26 +92,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1350"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(test_targets)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -161,20 +128,20 @@
       "The accuracy is 99.41%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.99      1.00       128\n",
-      "           1       0.99      1.00      1.00       136\n",
-      "           2       0.99      1.00      0.99       137\n",
-      "           3       0.99      0.98      0.99       112\n",
-      "           4       1.00      0.99      1.00       150\n",
-      "           5       0.98      0.98      0.98       112\n",
-      "           6       1.00      1.00      1.00       166\n",
-      "           7       1.00      1.00      1.00       133\n",
-      "           8       0.99      1.00      1.00       143\n",
-      "           9       0.99      0.98      0.99       133\n",
+      "           0     1.0000    0.9922    0.9961       128\n",
+      "           1     0.9927    1.0000    0.9963       136\n",
+      "           2     0.9856    1.0000    0.9928       137\n",
+      "           3     0.9910    0.9821    0.9865       112\n",
+      "           4     1.0000    0.9933    0.9967       150\n",
+      "           5     0.9821    0.9821    0.9821       112\n",
+      "           6     1.0000    1.0000    1.0000       166\n",
+      "           7     1.0000    1.0000    1.0000       133\n",
+      "           8     0.9931    1.0000    0.9965       143\n",
+      "           9     0.9924    0.9850    0.9887       133\n",
       "\n",
-      "    accuracy                           0.99      1350\n",
-      "   macro avg       0.99      0.99      0.99      1350\n",
-      "weighted avg       0.99      0.99      0.99      1350\n",
+      "    accuracy                         0.9941      1350\n",
+      "   macro avg     0.9937    0.9935    0.9936      1350\n",
+      "weighted avg     0.9941    0.9941    0.9941      1350\n",
       "\n"
      ]
     },
@@ -321,47 +288,39 @@
          "colorscale": [
           [
            0,
-           "rgb(5,48,97)"
+           "rgb(247,251,255)"
           ],
           [
-           0.1,
-           "rgb(33,102,172)"
+           0.125,
+           "rgb(222,235,247)"
           ],
           [
-           0.2,
-           "rgb(67,147,195)"
+           0.25,
+           "rgb(198,219,239)"
           ],
           [
-           0.3,
-           "rgb(146,197,222)"
-          ],
-          [
-           0.4,
-           "rgb(209,229,240)"
+           0.375,
+           "rgb(158,202,225)"
           ],
           [
            0.5,
-           "rgb(247,247,247)"
+           "rgb(107,174,214)"
           ],
           [
-           0.6,
-           "rgb(253,219,199)"
+           0.625,
+           "rgb(66,146,198)"
           ],
           [
-           0.7,
-           "rgb(244,165,130)"
+           0.75,
+           "rgb(33,113,181)"
           ],
           [
-           0.8,
-           "rgb(214,96,77)"
-          ],
-          [
-           0.9,
-           "rgb(178,24,43)"
+           0.875,
+           "rgb(8,81,156)"
           ],
           [
            1,
-           "rgb(103,0,31)"
+           "rgb(8,48,107)"
           ]
          ]
         },
@@ -1216,22 +1175,22 @@
     "\n",
     "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "print(classification_report(y_true=test_targets, y_pred=predictions))\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"RdBu_r\")"
+    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.39 ms ± 342 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "1.66 ms ± 47.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1249,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
