--- a/xgboost_model.ipynb
+++ b/xgboost_model.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "              predictor='auto', random_state=0, reg_alpha=0, ...)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,20 +150,20 @@
       "The accuracy is 99.33%\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.98      0.99       128\n",
-      "           1       0.99      1.00      1.00       136\n",
-      "           2       0.99      1.00      0.99       137\n",
-      "           3       0.98      0.98      0.98       112\n",
-      "           4       1.00      0.99      1.00       150\n",
-      "           5       0.99      0.98      0.99       112\n",
-      "           6       0.99      1.00      1.00       166\n",
-      "           7       1.00      0.99      1.00       133\n",
-      "           8       0.99      1.00      1.00       143\n",
-      "           9       0.99      0.99      0.99       133\n",
+      "           0     1.0000    0.9844    0.9921       128\n",
+      "           1     0.9927    1.0000    0.9963       136\n",
+      "           2     0.9856    1.0000    0.9928       137\n",
+      "           3     0.9821    0.9821    0.9821       112\n",
+      "           4     1.0000    0.9933    0.9967       150\n",
+      "           5     0.9910    0.9821    0.9865       112\n",
+      "           6     0.9940    1.0000    0.9970       166\n",
+      "           7     1.0000    0.9925    0.9962       133\n",
+      "           8     0.9931    1.0000    0.9965       143\n",
+      "           9     0.9925    0.9925    0.9925       133\n",
       "\n",
-      "    accuracy                           0.99      1350\n",
-      "   macro avg       0.99      0.99      0.99      1350\n",
-      "weighted avg       0.99      0.99      0.99      1350\n",
+      "    accuracy                         0.9933      1350\n",
+      "   macro avg     0.9931    0.9927    0.9929      1350\n",
+      "weighted avg     0.9934    0.9933    0.9933      1350\n",
       "\n"
      ]
     },
@@ -310,47 +310,39 @@
          "colorscale": [
           [
            0,
-           "rgb(5,48,97)"
+           "rgb(247,251,255)"
           ],
           [
-           0.1,
-           "rgb(33,102,172)"
+           0.125,
+           "rgb(222,235,247)"
           ],
           [
-           0.2,
-           "rgb(67,147,195)"
+           0.25,
+           "rgb(198,219,239)"
           ],
           [
-           0.3,
-           "rgb(146,197,222)"
-          ],
-          [
-           0.4,
-           "rgb(209,229,240)"
+           0.375,
+           "rgb(158,202,225)"
           ],
           [
            0.5,
-           "rgb(247,247,247)"
+           "rgb(107,174,214)"
           ],
           [
-           0.6,
-           "rgb(253,219,199)"
+           0.625,
+           "rgb(66,146,198)"
           ],
           [
-           0.7,
-           "rgb(244,165,130)"
+           0.75,
+           "rgb(33,113,181)"
           ],
           [
-           0.8,
-           "rgb(214,96,77)"
-          ],
-          [
-           0.9,
-           "rgb(178,24,43)"
+           0.875,
+           "rgb(8,81,156)"
           ],
           [
            1,
-           "rgb(103,0,31)"
+           "rgb(8,48,107)"
           ]
          ]
         },
@@ -1205,22 +1197,22 @@
     "\n",
     "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "print(classification_report(y_true=test_targets, y_pred=predictions))\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
-    "px.imshow(conf_matrix, color_continuous_scale=\"RdBu_r\")"
+    "px.imshow(conf_matrix, color_continuous_scale=\"blues\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.6 ms ± 566 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "3.92 ms ± 300 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1238,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
